--- a/RCSwipeToDelete/app/build.gradle
+++ b/RCSwipeToDelete/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'com.android.support:recyclerview-v7:26.0.0-beta1'
+    compile 'com.android.support:design:26.0.0-beta1'
 
 }
